# VAS

./: .gitignore  AssemblyInfo.cs  CouchbaseDB.cs  CouchbaseManager.cs  CouchbaseStorage.cs  DocumentsSerializer.cs  FileStorage.cs  FileSystem.cs  LongoMatch.DB.Net45.csproj  LongoMatch.DB.csproj  LongoMatch.DB.projitems  Makefile.am  ObjectsCache.cs  SerializationContext.cs  configure.ac  packages.config
.github/: PULL_REQUEST_TEMPLATE.md
.nuget/: Makefile.am  NuGet.targets  nuget.config
.tx/: config
AssemblyInfo/: AssemblyInfo.cs  AssemblyInfo.cs.in
Documents/: DocumentHelpers.cs
HockeySDK-Windows/: Microsoft.HockeyApp.sln
Migration/: DatabaseMigration.cs
VAS.Addins/: Makefile.am  VAS.Addins.csproj
VAS.Core/: App.cs  Catalog.cs  Config.cs  Device.cs  DeviceID.cs  DeviceUtils.cs  DirectoryMonitor.cs  FodyWeavers.xml  GdkGlue.cs  Makefile.am  Resources.cs  ResourcesLocator.cs  StyleConf.cs  VAS.Core.Net45.csproj  VAS.Core.dll.config  VAS.Core.projitems  VAS.Core.shproj  packages.config  paket.references
VAS.DB/: CouchbaseManager.cs  CouchbaseStorage.cs  DocumentsSerializer.cs  FileStorage.cs  FileSystem.cs  IFileStorage.cs  LongoMatch.DB.Net45.csproj  LongoMatch.DB.projitems  Makefile.am  ObjectsCache.cs  SerializationContext.cs  VAS.DB.Net45.csproj  VAS.DB.projitems  VAS.DB.shproj  packages.config  (+1 more)
VAS.Tests/: LocalDatabaseManager.cs  LocalStorage.cs  Makefile.am  Setup.cs  Test.cs  Utils.cs  VAS.Tests.csproj  packages.config  paket.references
VAS.Tests/Core/: TestExtensionMethods.cs  TestResources.cs
VAS.Tests/Core/Common/: TestCloner.cs  TestColor.cs  TestDirectoryMonitor.cs  TestExtensions.cs  TestImage.cs  TestKeyboard.cs  TestLog.cs  TestRangeObservableCollection.cs  TestRegistry.cs  TestStateController.cs  TestTimeToStringConverter.cs  TestTypeConverters.cs  TestWatermark.cs
VAS.Tests/Core/Filters/: TestPredicates.cs  TestQueryFilter.cs  TestVisibleRangeObservableProxy.cs
VAS.Tests/Core/Hotkeys/: TestHotKeysContexts.cs  TestHotkeyVM.cs
VAS.Tests/Core/License/: TestLicenseLimitations.cs
VAS.Tests/Core/Serialization/: TestObjectChangedParser.cs
VAS.Tests/Core/Store/: TestActionLink.cs  TestCoordinates.cs  TestDashboardButton.cs  TestEventType.cs  TestFrameDrawing.cs  TestHotkey.cs  TestMediaFile.cs  TestMediaFileSet.cs  TestPlayer.cs  TestPoint.cs  TestProject.cs  TestStorableBase.cs  TestTag.cs  TestTime.cs  TestTimeNode.cs  TestTimelineEvent.cs  TestTimer.cs
VAS.Tests/Core/Store/Drawables/: TestAngle.cs  TestCircle.cs  TestCounter.cs  TestCross.cs  TestDrawable.cs  TestEllipse.cs  TestLine.cs  TestMultipoints.cs  TestQuadrilateral.cs  TestRectangle.cs  TestText.cs
VAS.Tests/Core/Store/Playlists/: TestPlaylist.cs  TestPlaylistPlayElement.cs
VAS.Tests/Core/Store/Templates/: TestDashboard.cs
VAS.Tests/Core/ViewModel/: TestCountLimitationBarChartVM.cs  TestDashboardButtonCollectionVM.cs  TestDashboardButtonVM.cs  TestDashboardVM.cs  TestEventButtonVM.cs  TestEventTypeTimelineVM.cs  TestEventTypeVM.cs  TestEventTypesTimelineVM.cs  TestJobVM.cs  TestLicenseBannerVM.cs  TestMediaFileSetVM.cs  TestPercentCircularChartVM.cs  TestPlayerViewModel.cs  TestPlaylistCollectionVM.cs  TestPlaylistElementVM.cs  TestPlaylistVM.cs  TestProjectVM.cs  TestProjectsManagerVM.cs  TestStorableVM.cs  TestTagVM.cs  TestTemplateManagerVM.cs  TestTemplateVM.cs  TestTimeNodeVM.cs  TestTimelineEventVM.cs  TestTimelineVM.cs  TestTimerButtonVM.cs  TestTimerVM.cs  TestTwoBarChartVM.cs  TestVideoPlayerVM.cs  TestVideoPlayerViewModel.cs
VAS.Tests/DB/: TestDatabaseManager.cs  TestStorage.cs  TestViews.cs
VAS.Tests/Drawing/: TestCanvasContainer.cs  TestEventTypeLabelView.cs
VAS.Tests/Drawing/CanvasObjects/Timeline/: TestEventTypeTimelineView.cs
VAS.Tests/Drawing/Widgets/: TestBlackboard.cs  TestDashboardCanvas.cs  TestFillCanvas.cs  TestPlaysTimeline.cs  TestTimerule.cs
VAS.Tests/Events/: TestEvents.cs  TestEventsBroker.cs
VAS.Tests/Helpers/: DummyBusyDialog.cs  TestCommandExtensions.cs
VAS.Tests/Integration/: TestQuickEditor.cs
VAS.Tests/MVVMC/: TestBindableBase.cs  TestBinding.cs  TestCollectionViewModel.cs  TestCommand.cs  TestCommandBinding.cs  TestControllerLocator.cs  TestKeyUpdaterCollectionViewModel.cs  TestLimitationCommand.cs  TestLimitedCollectionViewModel.cs  TestNestedSubViewModel.cs  TestNestedViewModel.cs  TestOneWayPropertyBinding.cs  TestPropertyBinding.cs  TestPropertyToPropertyBinding.cs  TestViewLocator.cs  TestViewModelBase.cs
VAS.Tests/Multimedia/: TestMultimediaToolkit.cs
VAS.Tests/Services/: TestCameraSynchronizationController.cs  TestControllerBase.cs  TestCoreEventsController.cs  TestCoreEventsManager.cs  TestDashboardEditorController.cs  TestDrawingsController.cs  TestDynamicButtonToolbarService.cs  TestEventsController.cs  TestEventsFilterController.cs  TestHotkeysService.cs  TestLicenseLimitationService.cs  TestMediaFileSetController.cs  TestPlayListController.cs  TestPlayerController.cs  TestPlaylistController.cs  TestPlaylistManager.cs  TestProjectsController.cs  TestRenderingJobsController.cs  TestScreenState.cs  TestTaggingController.cs  TestTemplatesController.cs  TestUserStatisticsService.cs  TestVideoPlayerController.cs  TestViewModelFactoryBaseService.cs
VAS.Tests/UI/: TestExtensionMethods.cs
data/icons/: Makefile.am
libvas/: Makefile  Makefile.am  baconvideowidget-marshal.c  baconvideowidget-marshal.h  baconvideowidget-marshal.list  gst-camera-capturer.c  gst-camera-capturer.h  gst-nle-source.c  gst-nle-source.h  gst-remuxer.c  gst-remuxer.h  gst-video-editor.c  gst-video-editor.h  gstscreenshot.c  lgm-device.c  lgm-device.h  lgm-gtk-glue.c  lgm-gtk-glue.h  lgm-utils.h  lgm-utils.m  lgm-video-player.c  lgm-video-player.h  libvas.cproj  main.c  test-capturer.c  test-converter.c  test-discoverer.c  test-editor.c  test-remuxer.c
pkgconfig/: Makefile.am  longomatch-gui.pc.in  vas-core.pc.in  vas-db.pc.in  vas-drawing-cairo.pc.in  vas-drawing.pc.in  vas-multimedia.pc.in  vas-services.pc.in  vas-ui-gtk2.pc.in  vas-ui-helpers-gtk2.pc.in  vas-ui-multimedia-gtk2.pc.in
system_uuid/: Makefile.am  vas-system-uuid.c
(+931 files in other folders)
