pcfiles = \
	vas-db.pc \
	vas-core.pc \
	vas-ui-helpers-gtk2.pc \
	vas-drawing-cairo.pc \
	vas-multimedia.pc \
	vas-services.pc


pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = $(pcfiles)

EXTRA_DIST = \
	vas-db.pc.in \
	vas-core.pc.in \
	vas-ui-helpers-gtk2.pc.in \
	vas-drawing-cairo.pc.in \
	vas-multimedia.pc.in \
	vas-services.pc.in

CLEANFILES = $(pcfiles)
