pcfiles = \
	vas-db.pc \
	vas-core.pc \
	vas-ui-helpers-gtk2.pc \
	vas-drawing-cairo.pc \
	vas-multimedia.pc \
	vas-services.pc \
	vas-drawing.pc \
	vas-ui-gtk2.pc \
	vas-ui-multimedia-gtk2.pc


pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = $(pcfiles)

EXTRA_DIST = \
	vas-db.pc.in \
	vas-core.pc.in \
	vas-ui-helpers-gtk2.pc.in \
	vas-drawing-cairo.pc.in \
	vas-multimedia.pc.in \
	vas-services.pc.in \
	vas-drawing.pc.in \
	vas-ui-gtk2.pc.in \
	vas-ui-multimedia-gtk2.pc.in

CLEANFILES = $(pcfiles)
