iconsdir = @datadir@/@PACKAGE@/icons
nobase_dist_icons_DATA = ../Makefile.am \
	../hicolor/index.theme \
	../hicolor/scalable/actions/longomatch-cancel-rec.svg \
	../hicolor/scalable/actions/longomatch-control-detach.svg \
	../hicolor/scalable/actions/longomatch-control-draw.svg \
	../hicolor/scalable/actions/longomatch-control-ff.svg \
	../hicolor/scalable/actions/longomatch-control-pause.svg \
	../hicolor/scalable/actions/longomatch-control-play.svg \
	../hicolor/scalable/actions/longomatch-control-record.svg \
	../hicolor/scalable/actions/longomatch-control-rw.svg \
	../hicolor/scalable/actions/longomatch-control-volume-hi.svg \
	../hicolor/scalable/actions/longomatch-live.svg \
	../hicolor/scalable/actions/longomatch-pause-clock.svg \
	../hicolor/scalable/actions/longomatch-replay.svg \
	../hicolor/scalable/actions/longomatch-resume-clock.svg \
	../hicolor/scalable/actions/longomatch-stop.svg
