iconsdir = @datadir@/@USER_PACKAGE@/icons
nobase_dist_icons_DATA = hicolor/index.theme \
	hicolor/scalable/actions/longomatch-cancel-rec.svg \
	hicolor/scalable/actions/longomatch-control-detach.svg \
	hicolor/scalable/actions/longomatch-control-draw.svg \
	hicolor/scalable/actions/longomatch-control-ff.svg \
	hicolor/scalable/actions/longomatch-control-pause.svg \
	hicolor/scalable/actions/longomatch-control-play.svg \
	hicolor/scalable/actions/longomatch-control-record.svg \
	hicolor/scalable/actions/longomatch-control-rw.svg \
	hicolor/scalable/actions/longomatch-control-volume-hi.svg \
	hicolor/scalable/actions/longomatch-live.svg \
	hicolor/scalable/actions/longomatch-pause-clock.svg \
	hicolor/scalable/actions/longomatch-replay.svg \
	hicolor/scalable/actions/longomatch-resume-clock.svg \
	hicolor/scalable/actions/longomatch-stop.svg \
	hicolor/scalable/actions/vas-delete.svg \
	hicolor/scalable/actions/vas-limit-upgrade.svg \
	hicolor/scalable/actions/vas-location-moving.svg \
	hicolor/scalable/actions/vas-location-notset.svg \
	hicolor/scalable/actions/vas-location-set.svg \
	hicolor/scalable/actions/vas-quit.svg \
	hicolor/scalable/actions/video_c_play.svg
