iconsdir = @datadir@/@USER_PACKAGE@/icons
nobase_dist_icons_DATA = hicolor/index.theme \
	hicolor/scalable/actions/ra-video-c-play.svg \
	hicolor/scalable/actions/vas-cancel-rec.svg \
	hicolor/scalable/actions/vas-control-detach.svg \
	hicolor/scalable/actions/vas-control-draw.svg \
	hicolor/scalable/actions/vas-control-ff.svg \
	hicolor/scalable/actions/vas-control-pause.svg \
	hicolor/scalable/actions/vas-control-play.svg \
	hicolor/scalable/actions/vas-control-record.svg \
	hicolor/scalable/actions/vas-control-rw.svg \
	hicolor/scalable/actions/vas-control-volume-hi.svg \
	hicolor/scalable/actions/vas-delete.svg \
	hicolor/scalable/actions/vas-limit-upgrade.svg \
	hicolor/scalable/actions/vas-live.svg \
	hicolor/scalable/actions/vas-location-moving.svg \
	hicolor/scalable/actions/vas-location-notset.svg \
	hicolor/scalable/actions/vas-location-set.svg \
	hicolor/scalable/actions/vas-pause-clock.svg \
	hicolor/scalable/actions/vas-quit.svg \
	hicolor/scalable/actions/vas-replay.svg \
	hicolor/scalable/actions/vas-resume-clock.svg \
	hicolor/scalable/actions/vas-stop.svg
